<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.alicana</groupId>
    <artifactId>basic-trading-bot-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>${project.groupId} - ${project.artifactId}</name>
    <description>BUX Backend Dev Assignment - Parent Module</description>

    <properties>
        <java.version>16</java.version>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- mvn plugin depencies' versions -->
        <version.maven-checkstyle-plugin>3.1.2</version.maven-checkstyle-plugin>
        <version.com.puppycrawl.tools>8.41</version.com.puppycrawl.tools>
        <version.maven-enforcer-plugin>3.0.0-M2</version.maven-enforcer-plugin>
        <version.spotbugs-maven-plugin>4.2.0</version.spotbugs-maven-plugin>
        <version.com.github.spotbugs>4.2.2</version.com.github.spotbugs>
        <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
        <version.maven-surefire-plugin>3.0.0-M5</version.maven-surefire-plugin>
        <version.maven-shade-plugin>3.2.4</version.maven-shade-plugin>
        <version.jacoco-maven-plugin>0.8.6</version.jacoco-maven-plugin>
        <jacoco.line-coverage>0.70</jacoco.line-coverage>
        <jacoco.branch-coverage>0.75</jacoco.branch-coverage>
        <jacoco.complexity-coverage>0.70</jacoco.complexity-coverage>
        <!-- dependency versions -->
        <version.com.squareup.retrofit2>2.9.0</version.com.squareup.retrofit2>
        <version.com.squareup.okhttp3>3.14.9</version.com.squareup.okhttp3>
        <version.joda-time>2.10.10</version.joda-time>
        <version.io.reactivex.rxjava3>3.0.11</version.io.reactivex.rxjava3>
        <version.org.slf4j.slf4j-api>1.7.30</version.org.slf4j.slf4j-api>
        <version.ch.qos.logback>1.2.3</version.ch.qos.logback>
        <version.org.apache.commons.configuration2>2.7</version.org.apache.commons.configuration2>
        <version.org.apache.commons.beanutils>1.9.4</version.org.apache.commons.beanutils>
        <version.org.junit.jupiter>5.7.1</version.org.junit.jupiter>
        <version.org.assertj>3.19.0</version.org.assertj>
        <version.org.mockito>3.8.0</version.org.mockito>
    </properties>

    <modules>
        <module>bux-platform-api-client</module>
        <module>bux-platform-trading-app</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.squareup.retrofit2</groupId>
                <artifactId>retrofit</artifactId>
                <version>${version.com.squareup.retrofit2}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.retrofit2</groupId>
                <artifactId>converter-jackson</artifactId>
                <version>${version.com.squareup.retrofit2}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>logging-interceptor</artifactId>
                <version>${version.com.squareup.okhttp3}</version>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>${version.joda-time}</version>
            </dependency>
            <dependency>
                <groupId>io.reactivex.rxjava3</groupId>
                <artifactId>rxjava</artifactId>
                <version>${version.io.reactivex.rxjava3}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${version.org.slf4j.slf4j-api}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${version.ch.qos.logback}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${version.ch.qos.logback}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-configuration2</artifactId>
                <version>${version.org.apache.commons.configuration2}</version>
            </dependency>
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>${version.org.apache.commons.beanutils}</version>
            </dependency>
            <!-- test dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${version.org.junit.jupiter}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${version.org.assertj}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-inline</artifactId>
                <version>${version.org.mockito}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${version.org.mockito}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>mockwebserver</artifactId>
                <version>${version.com.squareup.okhttp3}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- CHECKSTYLE PLUGIN -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${version.maven-checkstyle-plugin}</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>${version.com.puppycrawl.tools}</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <id>checkstyle-compile</id>
                            <phase>validate</phase>
                            <configuration>
                                <configLocation>checkstyle.xml</configLocation>
                                <encoding>UTF-8</encoding>
                                <consoleOutput>true</consoleOutput>
                                <failsOnError>true</failsOnError>
                                <suppressionsLocation>checkstyle-suppression.xml</suppressionsLocation>
                            </configuration>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- SPOTBUGS PLUGIN -->
                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>${version.spotbugs-maven-plugin}</version>
                    <dependencies>
                        <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
                        <dependency>
                            <groupId>com.github.spotbugs</groupId>
                            <artifactId>spotbugs</artifactId>
                            <version>${version.com.github.spotbugs}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <effort>Max</effort>
                        <failOnError>true</failOnError>
                        <threshold>Low</threshold>
                        <xmlOutput>true</xmlOutput>
                        <spotbugsXmlOutputDirectory>${project.build.directory}/spotbugs</spotbugsXmlOutputDirectory>
                        <excludeFilterFile>spotbugs-exclude.xml</excludeFilterFile>
                    </configuration>
                    <executions>
                        <execution>
                            <id>spotbugs</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- MVN ENFORCER PLUGIN -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${version.maven-enforcer-plugin}</version>
                    <executions>
                        <execution>
                            <id>enforce</id>
                            <configuration>
                                <rules>
                                    <!-- ensure all dependencies converge to the same version -->
                                    <dependencyConvergence/>
                                    <!-- enforces that the project doesn't have duplicate declared dependencies -->
                                    <banDuplicatePomDependencyVersions/>
                                    <requireUpperBoundDeps/>
                                    <reactorModuleConvergence>
                                        <message>All modules in the build must have same verison</message>
                                    </reactorModuleConvergence>
                                    <requireReleaseDeps>
                                        <onlyWhenRelease>true</onlyWhenRelease>
                                        <message>Snapshots dependencies are not allowed on release version!</message>
                                    </requireReleaseDeps>
                                    <requireProperty>
                                        <property>project.name</property>
                                        <message>You must set a project.name property!</message>
                                    </requireProperty>
                                    <requireProperty>
                                        <property>project.description</property>
                                        <message>You must set a project.description property!</message>
                                    </requireProperty>
                                </rules>
                                <fail>true</fail>
                            </configuration>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- MVN COMPILER PLUGIN -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${version.maven-compiler-plugin}</version>
                    <configuration>
                        <release>${java.version}</release>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>
                <!-- MVN SUREFIRE PLUGIN -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${version.maven-surefire-plugin}</version>
                    <configuration>
                        <argLine>${argLine} --enable-preview</argLine>
                    </configuration>
                    <executions>
                        <execution>
                            <id>default-test</id>
                            <configuration>
                                <skipTests>true</skipTests>
                            </configuration>
                        </execution>
                        <execution>
                            <id>unit-tests</id>
                            <phase>test</phase>
                            <goals>
                                <goal>test</goal>
                            </goals>
                            <configuration>
                                <includes>
                                    <include>**/*Test.java</include>
                                </includes>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <!-- MVN FAILSAFE PLUGIN -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${version.maven-failsafe-plugin}</version>
                    <executions>
                        <execution>
                            <id>integration-tests</id>
                            <phase>integration-test</phase>
                            <goals>
                                <goal>integration-test</goal>
                            </goals>
                            <configuration>
                                <skip>false</skip>
                                <includes>
                                    <include>**/*IT.java</include>
                                </includes>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <!-- JACOCO PLUGIN -->
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${version.jacoco-maven-plugin}</version>
                    <executions>
                        <execution>
                            <id>default-prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>default-report</id>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>default-check</id>
                            <goals>
                                <goal>check</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <rule>
                                        <element>BUNDLE</element>
                                        <limits>
                                            <limit>
                                                <counter>LINE</counter>
                                                <value>COVEREDRATIO</value>
                                                <minimum>${jacoco.line-coverage}</minimum>
                                            </limit>
                                            <limit>
                                                <counter>BRANCH</counter>
                                                <value>COVEREDRATIO</value>
                                                <minimum>${jacoco.branch-coverage}</minimum>
                                            </limit>
                                            <limit>
                                                <counter>COMPLEXITY</counter>
                                                <value>COVEREDRATIO</value>
                                                <minimum>${jacoco.complexity-coverage}</minimum>
                                            </limit>
                                        </limits>
                                    </rule>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${version.maven-shade-plugin}</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
